<resources>
    <string name="app_name">TravelHelper</string>

    <string name="loading">Loading...</string>

    //bottomnavigationview
    <string name="title_dashboard">Dashboard</string>
    <string name="title_search">Search</string>
    <string name="title_more">More</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="version">Version: 1.0.0</string>
    <string name="copy_right">Copyright @ 2019 | tailt</string>
    <string name="login">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="empty_field">Empty field!</string>
    <string name="sign_up">Sign Up</string>
    <string name="join_with_us">Join with us</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="dashboard">Dashboard</string>
    <string name="require_user_name">Please input your user name</string>
    <string name="require_password">Please input your password</string>
    <string name="register_success">Register successfully</string>
    <string name="title_upcoming_travel">Upcoming Travel</string>
    <string name="location">Location</string>
    <string name="public_trip">Public Trip</string>
    <string name="no_upcoming">No up coming trip or host</string>
    <string name="hello">Hello</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="get_public_trips_error">Can not get public trips</string>
    <string name="create_trips">CREATE TRIP</string>
    <string name="trip_info">Trip\'s Information</string>
    <string name="trip_descriptions">Trip\'s Description</string>
    <string name="say_sth_about_trip">Say something abour your trip.</string>
    <string name="where_go">Where are you going?</string>
    <string name="when_go">When are you going?</string>
    <string name="when_arrival">When are you arrival?</string>
    <string name="when_departure">When are you departure?</string>
    <string name="warning_post_public_trip">
        Post your trip details so that you can be discovered by local hosts or other travelers
    </string>
    <string name="traveler">traveler</string>
    <string name="travelers">travelers</string>
    <string name="create">CREATE</string>
    <string name="create_trip">Create public trip</string>
    <string name="addresses_empty">List address is empty</string>
    <string name="warning_arrival_must_be_after_departure">Arrival date must be before departure date</string>
    <string name="add">Add</string>
    <string name="warning_input_destination">Please input destination</string>
    <string name="warning_select_destination">Please select one of destination suggest</string>
    <string name="warning_input_arrival_date">Please select arrival date</string>
    <string name="warning_input_departure_date">Please select departure date</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="update_trip">Update public trip</string>
    <string name="data_null">Return is null</string>
    <string name="can_not_delete_trip">Can not delete this public trip</string>
    <string name="confirm_delete_trip">Are you sure want to delete this public trip?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="host">Hosting</string>
    <string name="my_public_trip">My public trips</string>
    <string name="friend">Friends</string>
    <string name="setting">Setting</string>
    <string name="inbox">Inbox</string>
    <string name="logout">Logout</string>
    <string name="confirm_logout">Are you sure want to logout?</string>
    <string name="about_me">About me</string>
    <string name="overview">Overview</string>
    <string name="address">Address</string>
    <string name="fluence_language">Fluence language</string>
    <string name="learning_language">Learning language</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="occupation">Occupation</string>
    <string name="photos">Photos</string>
    <string name="interest">Interest</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="updated">Updated</string>
    <string name="no_photo">No photos to display</string>
    <string name="response_body_null">Response body is null</string>
    <string name="title">Title</string>
    <string name="no_name">No name</string>
    <string name="references">References</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="content">Content</string>
    <string name="home">Home</string>
    <string name="max_guest">Max number of guests</string>
    <string name="preferred_gender_host">Preferred Gender to Host</string>
    <string name="sleeping_arrangements">Sleeping Arrangements</string>
    <string name="description_arrangement">Description of Sleeping Arrangement</string>
    <string name="transportation_access">Public Transportation Access</string>
    <string name="allow_thing">Allowed Thing</string>
    <string name="stuff">Stuff</string>
    <string name="add_info">Additional Information</string>
    <string name="dont_have_home">No home info to display</string>
    <string name="dont_have_reference">No reference to display</string>
    <string name="no_host">No host was found out</string>
    <string name="request_from_traveler">Request from traveler</string>
    <string name="from">from</string>
    <string name="request_to_stay">Request to stay</string>
    <string name="can_not_create_equest">Can not create request</string>
    <string name="created">Created</string>
    <string name="my_request">My request to stay</string>
    <string name="you_dont_have_request">No request to display</string>
    <string name="can_not_get_request">Can not get request</string>
    <string name="would_you_commended">Would you recommend</string>
    <string name="warning_write_reference">Your reference will appear on this user profile, so be sure that you\'re only
        sharing words you\'re comfortable saying publicly.\nYou can\'t edit or delete it.
    </string>
    <string name="your_reference">Your reference</string>
    <string name="please_input_reference">Please input your reference</string>
    <string name="can_not_create_reference">Can not create reference</string>
    <string name="no_travelers">can not find out any travelers</string>
    <string name="visiting">Visiting</string>
    <string name="offer_to_host">Offer to host</string>
    <string name="offer">Offer</string>
    <string name="my_offer">My offer to host</string>
    <string name="offer_from_host">Offer from host</string>
    <string name="offered">Offered</string>
    <string name="message">Message</string>
    <string name="unfriend">Unfriend</string>
    <string name="can_not_get_friends">Can not get friends</string>
    <string name="can_not_find_out_friend">Can not found out any friend</string>
    <string name="travel_to">Travel to</string>
    <string name="accept">Accept</string>
    <string name="accepted">Accepted</string>
    <string name="ignore">Ignore</string>
    <string name="ignored">Ignored</string>
    <string name="waiting">Waiting</string>
    <string name="can_not_accept_host_offer">Can not accept host offer</string>
    <string name="can_not_accept_travel_request">Can not accept travel request</string>
    <string name="can_not_accept_friend_request">Can not accept friend request</string>
    <string name="can_not_ignore_host_offer">Can not ignore host offer</string>
    <string name="can_not_ignore_travel_request">Can not ignore travel request</string>
    <string name="can_not_ignore_friend_request">Can not ignore friend request</string>
    <string name="request_from_friend">Request from friend</string>
    <string name="my_friend_request">My friend request</string>
    <string name="can_not_find_friend_request">Can not found out any friend request</string>
    <string name="can_not_get_friend_request">Can not get friend requests</string>
    <string name="can_not_check_friend">Can not check friend</string>
    <string name="can_not_add_friend">Can not add friend</string>
    <string name="add_friend_successfully">Add friend successfully. Waiting for response</string>
    <string name="cancel">Cancel</string>
    <string name="can_not_get_my_requests">Cant not get your friend requests</string>
    <string name="search_friend_result">Search friend result</string>
    <string name="can_not_search_user">Can not search user</string>
    <string name="result_is_empty">Result is empty</string>
    <string name="can_not_cancel_request">Can not cancel request</string>
    <string name="some_thing_went_wrong">Some thing went wrong. Please, try again!</string>
</resources>
