<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include layout="@layout/custom_appbar_layout_dark"></include>

    <TextView
            android:id="@+id/tv_would_commended"
            android:layout_marginStart="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:text="@string/would_you_commended"
            android:layout_below="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <RadioGroup
            android:id="@+id/group_recommend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_would_commended">

        <RadioButton
                android:id="@+id/radio_yes"
                android:onClick="onRadioButtonClicked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/yes"/>

        <RadioButton
                android:id="@+id/radio_no"
                android:onClick="onRadioButtonClicked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"/>
    </RadioGroup>

    <TextView
            android:id="@+id/tv_warning_write_recommend"
            android:layout_marginStart="@dimen/_5sdp"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_10ssp"
            android:text="@string/warning_write_reference"
            android:layout_below="@+id/group_recommend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tv_your_references"
            android:layout_marginStart="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_10ssp"
            android:text="@string/your_reference"
            android:layout_below="@+id/tv_warning_write_recommend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/edt_your_references"
            android:layout_below="@id/tv_your_references"
            android:hint="@string/your_reference"
            android:padding="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            style="@style/SignUpActivityEditTextStyle"
            android:maxLines="7"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/btn_submit_reference"
            android:textAllCaps="false"
            android:text="@string/add"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/background_btn_sign_up"
            android:layout_marginBottom="@dimen/_30sdp"
            android:layout_below="@id/edt_your_references"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_70sdp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/sign_up_height_edt"/>

</RelativeLayout>