<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

    <ImageView
            android:id="@+id/app_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="0.95:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_50sdp"
            app:layout_constraintWidth_percent="0.5"
            android:background="@drawable/logo"
            android:backgroundTint="@color/colorWhite"/>

    <EditText
            android:id="@+id/edt_login_user_name"
            android:hint="@string/user_name"
            style="@style/LoginActivityEditTextStyle"
            app:layout_constraintTop_toBottomOf="@id/app_icon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintDimensionRatio="7:1"/>

    <EditText
            android:id="@+id/edt_login_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/LoginActivityEditTextStyle"
            app:layout_constraintTop_toBottomOf="@id/edt_login_user_name"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintDimensionRatio="7:1"/>

    <Button
            android:id="@+id/btn_login_submit"
            android:text="@string/login"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false"
            android:background="@drawable/background_btn_login"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/edt_login_password"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintDimensionRatio="7:1"/>

    <TextView
            android:id="@+id/tv_login_forgot_password"
            android:text="@string/forgot_password"
            android:gravity="center"
            style="@style/SplashActivityTexViewStyle"
            android:textStyle="italic"
            android:layout_marginBottom="@dimen/_20sdp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_login_sign_up"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintDimensionRatio="7:1"/>

    <TextView
            android:id="@+id/tv_login_sign_up"
            android:text="@string/join_with_us"
            android:gravity="center"
            style="@style/SplashActivityTexViewStyle"
            android:layout_marginBottom="@dimen/_20sdp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintDimensionRatio="7:1"/>
</android.support.constraint.ConstraintLayout>