<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginTop="@dimen/_1sdp"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/csl_profile_more"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp">

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cir_img_avatar_more"
                android:src="@drawable/ic_user_circle"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"/>

        <TextView
                android:id="@+id/tv_user_name_more"
                android:textSize="@dimen/_15ssp"
                android:layout_marginStart="@dimen/_7sdp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/user_name"
                app:layout_constraintLeft_toRightOf="@id/cir_img_avatar_more"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </android.support.constraint.ConstraintLayout>

    <View
            android:id="@+id/view1_more"
            android:layout_below="@id/csl_profile_more"
            android:background="@color/colorGrayDark"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"/>

    <LinearLayout
            android:id="@+id/ln_hosting_more"
            android:orientation="horizontal"
            android:layout_below="@id/view1_more"
            android:layout_width="match_parent"
            android:layout_height="@dimen/more_csl_height">

        <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_host"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/host"
                style="@style/MoreTextView"
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/ln_my_public_trip_more"
            android:orientation="horizontal"
            android:layout_below="@id/ln_hosting_more"
            android:layout_width="match_parent"
            android:layout_height="@dimen/more_csl_height">

        <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_airplane1"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/my_public_trip"
                style="@style/MoreTextView"
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/ln_fiend_more"
            android:orientation="horizontal"
            android:layout_below="@id/ln_my_public_trip_more"
            android:layout_width="match_parent"
            android:layout_height="@dimen/more_csl_height">

        <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_friend"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/friend"
                style="@style/MoreTextView"
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/ln_inbox_more"
            android:orientation="horizontal"
            android:layout_below="@id/ln_fiend_more"
            android:layout_width="match_parent"
            android:layout_height="@dimen/more_csl_height">

        <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_inbox"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/inbox"
                style="@style/MoreTextView"
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <View
            android:id="@+id/view2_more"
            android:layout_below="@id/ln_inbox_more"
            android:background="@color/colorGrayDark"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"/>

    <LinearLayout
            android:id="@+id/ln_setting_more"
            android:orientation="horizontal"
            android:layout_below="@id/view2_more"
            android:layout_width="match_parent"
            android:layout_height="@dimen/more_csl_height">

        <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_setting"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/setting"
                style="@style/MoreTextView"
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
            android:id="@+id/btn_logout"
            android:textSize="@dimen/_17ssp"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:text="@string/logout"
            android:background="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"/>

</RelativeLayout>