<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/tv_dashboard_search"
            android:text="@string/title_search"
            style="@style/DashboardTextViewLabel"
            android:layout_margin="@dimen/_5sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rcv_search_dashboard"
            android:layout_margin="@dimen/_5sdp"
            android:layout_below="@id/tv_dashboard_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tv_dashboard_upcoming_event"
            android:text="@string/title_upcoming_travel"
            style="@style/DashboardTextViewLabel"
            android:layout_below="@id/rcv_search_dashboard"
            android:layout_margin="@dimen/_5sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rcv_public_trip_dashboard"
            android:visibility="gone"
            android:layout_margin="@dimen/_5sdp"
            android:layout_below="@id/tv_dashboard_upcoming_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tv_no_upcoming_dashboard"
            android:visibility="gone"
            android:textSize="@dimen/_12sdp"
            android:gravity="center"
            android:text="@string/no_upcoming"
            android:layout_below="@id/rcv_public_trip_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tv_create_trip_dashboard"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/colorBlack"
            android:text="CREATE TRIP"
            android:gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_below="@id/tv_no_upcoming_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</RelativeLayout>